test/library/standard/List/contains/listContainsInvalidPred.chpl
private use List;

var lst = new list(int);
lst.pushBack(1);

lst.contains(proc(): bool { return true; });
